--- a/obs/makefile.am
+++ b/obs/makefile.am
@@ -13,4 +13,5 @@ obs_PROGRAMS = obs
 obs_SOURCES = window-obs-basic.cpp \
 	      window-subclass.cpp \
 	      obs-app.cpp \
+	      wx-wrappers.cpp \
 	      OBSWindows.cpp
