fixed some build issues on non-windows systems

--- a/libobs-opengl/makefile.am
+++ b/libobs-opengl/makefile.am
@@ -1,4 +1,4 @@
-INCLUDES = -iquote$(top_srcdir)/libobs -isystem./glew/include
+INCLUDES = -isystem$(top_srcdir)/libobs -isystem./glew/include
 AM_CFLAGS = -DGLEW_NO_GLU -DGLEW_STATIC
 
 if OS_WIN
