--- a/test/osx/CMakeLists.txt
+++ b/test/osx/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories(${obs_SOURCE_DIR}/libobs)
+include_directories(SYSTEM ${obs_SOURCE_DIR}/libobs)
 
 find_library(COCOA Cocoa)
 include_directories(${COCOA})
