--- a/vs/2010/OBS/OBS.vcxproj.filters
+++ b/vs/2010/OBS/OBS.vcxproj.filters
@@ -13,11 +13,11 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="wx forms">
+      <UniqueIdentifier>{f75b760c-c01b-4e94-a989-ec8158e234c5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\obs\OBSWindows.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\obs\window-obs-basic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -30,11 +30,11 @@
     <ClCompile Include="..\..\..\obs\wx-wrappers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\obs\forms\OBSWindows.cpp">
+      <Filter>wx forms</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\obs\OBSWindows.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\obs\window-obs-basic.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -49,6 +49,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\obs\wx-wrappers.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\obs\forms\OBSWindows.h">
+      <Filter>wx forms</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
