--- a/vs/2010/OBS/OBS.vcxproj
+++ b/vs/2010/OBS/OBS.vcxproj
@@ -169,16 +169,16 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\obs\forms\OBSWindows.cpp" />
     <ClCompile Include="..\..\..\obs\obs-app.cpp" />
-    <ClCompile Include="..\..\..\obs\window-obs-basic.cpp" />
-    <ClCompile Include="..\..\..\obs\window-subclass.cpp" />
+    <ClCompile Include="..\..\..\obs\window-main-basic.cpp" />
+    <ClCompile Include="..\..\..\obs\wx-subclass.cpp" />
     <ClCompile Include="..\..\..\obs\wx-wrappers.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\obs\forms\OBSWindows.h" />
     <ClInclude Include="..\..\..\obs\obs-app.hpp" />
     <ClInclude Include="..\..\..\obs\obs-wrappers.hpp" />
-    <ClInclude Include="..\..\..\obs\window-obs-basic.hpp" />
-    <ClInclude Include="..\..\..\obs\window-subclass.hpp" />
+    <ClInclude Include="..\..\..\obs\window-main-basic.hpp" />
+    <ClInclude Include="..\..\..\obs\wx-subclass.hpp" />
     <ClInclude Include="..\..\..\obs\wx-wrappers.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
