--- a/obs/makefile.am
+++ b/obs/makefile.am
@@ -12,8 +12,8 @@ endif
 
 obs_PROGRAMS = obs
 obs_LDADD = $(top_srcdir)/libobs/libobs.la
-obs_SOURCES = window-obs-basic.cpp \
-	      window-subclass.cpp \
+obs_SOURCES = window-main-basic.cpp \
 	      obs-app.cpp \
+	      wx-subclass.cpp \
 	      wx-wrappers.cpp \
 	      forms/OBSWindows.cpp
