--- a/vs/2010/OBS/OBS.vcxproj.filters
+++ b/vs/2010/OBS/OBS.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="..\..\..\obs\wx-subclass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\obs\platform-windows.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\obs\obs-app.hpp">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\obs\wx-subclass.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\obs\platform.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
