Updated CMakeLists with new effect file locations, added cmake & xcode build folders to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,12 @@ tags
 *.ninja
 .ninja*
 .dirstamp
+
+#cmake
+cmake_install.cmake
+CMakeCache.txt
+CMakeFiles/
+CMakeScripts/
+
+#xcode
+*.xcodeproj/
