--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -72,5 +72,5 @@ target_link_libraries(libobs
 	${LIBAVUTIL_LIBRARIES}
 	${LIBSWRESAMPLE_LIBRARIES})
 
-file(COPY ${obs_SOURCE_DIR}/build/libobs/default.effect DESTINATION
-	${obs_BINARY_DIR}/libobs/)
+file(COPY ${obs_SOURCE_DIR}/build/data/libobs/default.effect DESTINATION
+	${obs_BINARY_DIR}/data/libobs/)
