added new settings management base class, updated main settings form, added to build files

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -43,6 +43,7 @@ endif()
 add_executable(obs
 	window-main-basic.cpp
 	window-settings-basic.cpp
+	settings-basic-general.cpp
 	wx-subclass.cpp
 	wx-wrappers.cpp
 	obs-app.cpp
