add AC_PROG_OBJCXX for objective-c++ code when compiling for mac

--- a/configure.ac
+++ b/configure.ac
@@ -15,6 +15,7 @@ AM_SILENT_RULES([yes])
 # Checks for programs.
 AC_PROG_CC_STDC
 AC_PROG_OBJC
+AC_PROG_OBJCXX
 AC_PROG_CXX
 AC_PROG_INSTALL
 AC_PROG_SED
