finish up preliminary settings stuff

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -43,6 +43,7 @@ endif()
 add_executable(obs
 	window-main-basic.cpp
 	window-settings-basic.cpp
+	settings-basic.cpp
 	settings-basic-general.cpp
 	settings-basic-video.cpp
 	wx-subclass.cpp
