--- a/vs/2013/OBS/OBS.vcxproj
+++ b/vs/2013/OBS/OBS.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="..\..\..\obs\platform-windows.cpp" />
     <ClCompile Include="..\..\..\obs\settings-basic-general.cpp" />
     <ClCompile Include="..\..\..\obs\settings-basic-video.cpp" />
+    <ClCompile Include="..\..\..\obs\settings-basic.cpp" />
     <ClCompile Include="..\..\..\obs\window-main-basic.cpp" />
     <ClCompile Include="..\..\..\obs\window-settings-basic.cpp" />
     <ClCompile Include="..\..\..\obs\wx-subclass.cpp" />
