--- a/vs/2013/OBS/OBS.vcxproj.filters
+++ b/vs/2013/OBS/OBS.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="..\..\..\obs\settings-basic-video.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\obs\settings-basic.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\obs\obs-app.hpp">
